[package]
authors = ["Harry Hornbacher <dev@harry-hornbacher.de>"]
categories = ["embedded", "hardware-support", "os"]
description = """
A Rust library for interfacing with the USB2642 I2C bus using the linux sg3 SCSI interface.
"""
documentation = "https://docs.rs/usb2642_i2c"
edition = "2018"
exclude = [
  "cargo/*",
]
keywords = ["usb2642", "i2c", "linux"]
license = "MIT"
name = "usb2642-i2c"
readme = "README.md"
repository = "https://github.com/hhornbacher/usb2642_i2c"
version = "0.1.1"

[dependencies]
nix = "0.19"
num-derive = "0.2"
num-traits = "0.2"

[dev-dependencies]
bitflags = "0.8"
